--- a/starter_files/style.css
+++ b/starter_files/style.css
@@ -106,6 +106,11 @@ form {
   padding-top: 10px;
 }
 
+form div{
+  padding: 30px;
+  font-weight: bold;
+}
+
 .name {
   background-color: #ff8523;
   border-radius: 5px;
@@ -123,6 +128,26 @@ form {
   padding: 15px;
 }
 
+.city_container {
+  margin-bottom: 30px;
+}
+
 .city_container label{
   font-weight: bold;
+}
+
+#bio {
+  display: block;
+  width: 95%;
+}
+
+.submit_container{
+
+}
+
+#submit_button {
+  background-color: #1fabe5;
+  color: white;
+  padding: 15px;
+  text-transform: uppercase;
 }
